--- a/style.css
+++ b/style.css
@@ -1,3 +1,41 @@
-h1 {color:blue;font-size: 37px;font-family:Georgia, 'Times New Roman', Times, serif}
-h3 {font-style: italic; font-family: Georgia, 'Times New Roman', Times, serif;}
+:root {
+    --font-color: midnightblue;
+    --back-color: rgb(242, 242, 248, 0.5);
+}
+.center-page {
+    margin: 20px auto;
+    width: 1024px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 18px;
+    line-height: 1.5;
+    background-color: #ffffff;
+    box-shadow: 10px 10px 40px -1px rgba(3, 63, 87, 0.5);
+    padding: 20px 20px 20px 70px;
+}
+.first-column {
+    width: 45%;
+    color: var(--font-color);
+    background-color: var(--back-color);}
+
+.font-header {
+    color:var(--font-color);
+    font-size: 18 px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-weight: bold;
+    line-height: 0.5;
+} // не работает 
+h1 {
+    color:var(--font-color);
+    font-size: 26 px;
+    font-family:Georgia, 'Times New Roman', Times, serif
+    font-weight: bold;
+    line-height: 0.5;
+}
+.hard-skills {
+    color:var(--font-color);
+    font-size: 14 px;
+    font-family:Georgia, 'Times New Roman', Times, serif
+    font-style: italic;
+    line-height: 0.5;
+}
 p {font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
