--- a/style.css
+++ b/style.css
@@ -1,8 +1,17 @@
 :root {
     --font-color: midnightblue;
-    --back-color: rgb(242, 242, 248, 0.5);
+    --back-color: rgba(235, 197, 30, 0.5);
 }
-.center-page {
+
+.body {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: rgb(231, 27, 27);
+  }
+
+  .center-page {
     margin: 20px auto;
     width: 1024px;
     font-family:Georgia, 'Times New Roman', Times, serif;
@@ -10,27 +19,56 @@
     line-height: 1.5;
     background-color: #ffffff;
     box-shadow: 10px 10px 40px -1px rgba(3, 63, 87, 0.5);
-    padding: 20px 20px 20px 70px;
+    padding: 20px 20px 20px 20px;
 }
+
+.two-columns {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .first-column {
-    width: 45%;
+    width: 42%;
+    padding: 20px;
     color: var(--font-color);
     background-color: var(--back-color);}
 
-.font-header {
-    color:var(--font-color);
-    font-size: 18 px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    font-weight: bold;
-    line-height: 0.5;
-} // не работает 
+.second-column {
+    width: 50%;
+    padding: 20px;
+    color: var(--font-color);
+    background-color: grey;
+}  
+
+.header {
+    padding: 30px;
+    text-align: center;
+    background-color: #4daa5c;
+} 
+
+.header-image {
+    width: 400px;
+    height: 400px;
+    margin-bottom: 10px;
+    border: 50px solid var(--font-color);
+  }
+
+
 h1 {
     color:var(--font-color);
     font-size: 26 px;
     font-family:Georgia, 'Times New Roman', Times, serif
     font-weight: bold;
+    line-height: 1.0;
+
+h2 {
+    color:var(--font-color);
+    font-size: 20 px;
+    font-family:Georgia, 'Times New Roman', Times, serif
+    font-style: italic;
     line-height: 0.5;
 }
+
 .hard-skills {
     color:var(--font-color);
     font-size: 14 px;
@@ -38,4 +76,8 @@ h1 {
     font-style: italic;
     line-height: 0.5;
 }
-p {font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
+
+.my-github {
+  text-decoration: none;
+  color: var(--font-color);
+}
