--- a/style.css
+++ b/style.css
@@ -1,83 +1,110 @@
 :root {
-    --font-color: midnightblue;
-    --back-color: rgba(235, 197, 30, 0.5);
+  --font-color: rgb(35, 18, 95);
+  --back-color: rgba(30, 85, 235, 0.3);
+  --font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 .body {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-color: rgb(231, 27, 27);
-  }
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  background-color: rgb(239, 252, 251);
+  font-family: var(--font-family);
+}
 
-  .center-page {
-    margin: 20px auto;
-    width: 1024px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    font-size: 18px;
-    line-height: 1.5;
-    background-color: #ffffff;
-    box-shadow: 10px 10px 40px -1px rgba(3, 63, 87, 0.5);
-    padding: 20px 20px 20px 20px;
+.center-page {
+  margin: 20px auto;
+  width: 1024px;
+  font-family: var(--font-family);
+  line-height: 1.5;
+  background-color: #ffffff;
+  box-shadow: 10px 10px 40px -1px rgba(3, 63, 87, 0.5);
+  padding: 20px 20px 20px 20px;
 }
 
 .two-columns {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .first-column {
-    width: 42%;
-    padding: 20px;
-    color: var(--font-color);
-    background-color: var(--back-color);}
-
-.second-column {
-    width: 50%;
-    padding: 20px;
-    color: var(--font-color);
-    background-color: grey;
-}  
-
-.header {
-    padding: 30px;
-    text-align: center;
-    background-color: #4daa5c;
-} 
-
-.header-image {
-    width: 400px;
-    height: 400px;
-    margin-bottom: 10px;
-    border: 50px solid var(--font-color);
-  }
-
-
-h1 {
-    color:var(--font-color);
-    font-size: 26 px;
-    font-family:Georgia, 'Times New Roman', Times, serif
-    font-weight: bold;
-    line-height: 1.0;
-
-h2 {
-    color:var(--font-color);
-    font-size: 20 px;
-    font-family:Georgia, 'Times New Roman', Times, serif
-    font-style: italic;
-    line-height: 0.5;
+  width: 42%;
+  padding: 20px;
+  color: var(--font-color);
+  background-color: var(--back-color);
 }
 
-.hard-skills {
-    color:var(--font-color);
-    font-size: 14 px;
-    font-family:Georgia, 'Times New Roman', Times, serif
-    font-style: italic;
-    line-height: 0.5;
+.second-column {
+  width: 50%;
+  padding: 20px;
+  color: var(--font-color);
+  background-color: rgb(228, 220, 245);
+}
+
+.header {
+  padding: 30px;
+  text-align: center;
+  background-color: rgba(158, 248, 229, 0.5);
+}
+
+.header-image {
+  width: 400px;
+  height: 200px;
+  margin-bottom: 10px;
+  border: 50px solid var(--font-color);
+}
+
+h1 {
+  color: var(--font-color);
+  font-size: 26 px;
+  font-family: var(--font-family);
+  font-weight: bold;
+  line-height: 1;
+}
+
+h2 {
+  color: var(--font-color);
+  font-size: 20 px;
+  font-family: var(--font-family);
+  font-style: italic;
+  line-height: 0.5;
+}
+
+h3 {
+  border: 1px solid #3d0ea8;
+  padding: 2px 2px 2px 15px;
+  color: #ffffff;
+  background-color: #3d0ea8;
+}
+
+.section {
+  color: var(--font-color);
+  font-size: 14 px;
+  font-family: var(--font-family);
 }
 
 .my-github {
+  display: flex;
+  font-family: var(--font-family);
   text-decoration: none;
   color: var(--font-color);
+  padding: 2px 2px 2px 440px;
+  font-weight: bold;
+}
+
+.rs-school {
+  display: flex;
+  align-items: center;
+  font-family: var(--font-family);
+  text-decoration: none;
+  color: var(--font-color);
+  text-align: left;
+}
+
+ul {
+  list-style: none;
+}
+p {
+  text-align: justify;
 }
