--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   --font-family: Georgia, "Times New Roman", Times, serif;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .body {
   box-sizing: border-box;
   display: flex;
@@ -46,6 +50,20 @@
   padding: 30px;
   text-align: center;
   background-color: rgba(158, 248, 229, 0.5);
+}
+
+.nav-list {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.nav-link {
+  padding: 0px 0px 10px 10px;
+  line-height: 20 px;
+  transition: 0.3s;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .header-image {
@@ -95,11 +113,10 @@ h3 {
 
 .rs-school {
   display: flex;
-  align-items: center;
   font-family: var(--font-family);
   text-decoration: none;
   color: var(--font-color);
-  text-align: left;
+  font-weight: bold;
 }
 
 ul {
