--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ html {
   scroll-behavior: smooth;
 }
 
+@media (min-width: 758px) {
+  .body {
+    width: 100%;
+  }
+
 .body {
   box-sizing: border-box;
   display: flex;
@@ -52,6 +57,10 @@ html {
   background-color: rgba(158, 248, 229, 0.5);
 }
 
+.nav {
+  padding: 10px 0px 10px 0px;
+}
+
 .nav-list {
   display: flex;
   justify-content: flex-start;
@@ -59,18 +68,18 @@ html {
 }
 
 .nav-link {
-  padding: 0px 0px 10px 10px;
+  padding: 0px 0px 0px 20px;
   line-height: 20 px;
-  transition: 0.3s;
   text-decoration: none;
   font-weight: bold;
+  transition: 0.3s;
 }
 
 .header-image {
-  width: 400px;
-  height: 200px;
+  width: 255px;
+  height: 400px;
   margin-bottom: 10px;
-  border: 50px solid var(--font-color);
+  border-radius: 20px;
 }
 
 h1 {
@@ -82,11 +91,12 @@ h1 {
 }
 
 h2 {
+  margin:2px 2px 2px 2px;
   color: var(--font-color);
   font-size: 20 px;
   font-family: var(--font-family);
   font-style: italic;
-  line-height: 0.5;
+  line-height: 1;
 }
 
 h3 {
@@ -100,7 +110,12 @@ h3 {
   color: var(--font-color);
   font-size: 14 px;
   font-family: var(--font-family);
+  }
+
+.projects {
+  text-decoration: none;
 }
+
 
 .my-github {
   display: flex;
