--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ html {
   padding: 30px;
   text-align: center;
   background-color: rgba(158, 248, 229, 0.5);
+  border-radius: 20px;
 }
 
 .nav {
@@ -102,7 +103,8 @@ h3 {
 .section {
   color: var(--font-color);
   font-family: var(--font-family);
-}
+  border-radius: 20px;
+  }
 
 
 .projects {
